created game logic

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<header>	
+		<header>
 			<h1>Memory Game</h1>
 		</header>
 		<nav>
@@ -31,7 +31,11 @@
 			</div>
 
 		</main>
-
+		<footer>
+			<p>Copyright 2018</p>
+			<p>Created with &hearts; by <span class="name">GA</span></p>
+		</footer>
+		<script src="js/main.js"></script>
 	</body>
 
 </html>
